--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/server/index.js",
     "start-client-dev": "webpack-serve",
-    "start-server-dev": "ts-node src/server/index.ts",
+    "start-server-dev": "ts-node-dev src/server/index.ts",
     "build": "npm run build-client && npm run build-server",
     "build-client": "webpack --mode production",
     "build-server": "tsc",
@@ -21,6 +21,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.2.0",
     "ts-loader": "^5.3.3",
+    "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.2.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
