--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start-client": "webpack-serve",
     "start-server": "ts-node-dev src/server/index.ts",
     "test": "npm run build-client && npm run test-back-only",
-    "test-back-only": "mocha --exit --require ts-node/register ./src/server/*.spec.ts"
+    "test-back-only": "mocha --timeout 3000 --exit --require ts-node/register ./src/server/**/*.spec.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
@@ -35,7 +35,6 @@
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
-    "rxjs": "^6.4.0",
-    "socket.io-client": "^2.2.0"
+    "rxjs": "^6.4.0"
   }
 }
