--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-html": "^1.0.5",
+    "karma-jasmine": "^2.0.1",
+    "karma-phantomjs-launcher": "^1.0.4",
     "mocha": "^5.2.0",
     "ts-loader": "^5.3.3",
     "ts-node-dev": "^1.0.0-pre.32",
@@ -35,6 +39,7 @@
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
+    "karma": "^4.0.0",
     "rxjs": "^6.4.0"
   }
 }
