testing client and server with ts

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "start": "node dist/server/index.js",
     "start-client": "webpack-serve",
     "start-server": "ts-node-dev src/server/index.ts",
-    "test": "npm run build-client && npm run test-back-only",
-    "test-back-only": "mocha --timeout 3000 --exit --require ts-node/register ./src/server/**/*.spec.ts"
+    "build-test": "npm run build-client && npm run test-server",
+    "test": "npm run test-client && npm run test-server",
+    "test-client": "node ./node_modules/karma/bin/karma start ./src/client/karma.config.ts",
+    "test-server": "mocha --timeout 3000 --exit --require ts-node/register ./src/server/**/*.spec.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.1",
     "@types/express-ws": "^3.0.0",
+    "@types/jasmine": "^3.3.9",
+    "@types/karma": "^3.0.2",
     "@types/mocha": "^5.2.5",
     "@webcomponents/webcomponentsjs": "^2.2.7",
     "chai": "^4.2.0",
@@ -26,7 +30,9 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-html": "^1.0.5",
     "karma-jasmine": "^2.0.1",
+    "karma-jasmine-dom": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-typescript": "^4.0.0",
     "mocha": "^5.2.0",
     "ts-loader": "^5.3.3",
     "ts-node-dev": "^1.0.0-pre.32",
