--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build-client": "webpack --mode production",
     "build-server": "tsc",
     "build-start": "npm run build && npm start",
+    "build-test": "npm run build-client && npm run test-server",
     "start": "node dist/server/index.js",
     "start-client": "webpack-serve",
     "start-server": "ts-node-dev src/server/index.ts",
-    "build-test": "npm run build-client && npm run test-server",
     "test": "npm run test-client && npm run test-server",
     "test-client": "node ./node_modules/karma/bin/karma start ./src/client/karma.config.ts",
     "test-server": "mocha --timeout 3000 --exit --require ts-node/register ./src/server/**/*.spec.ts"
@@ -27,11 +27,11 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.3.1",
+    "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-html": "^1.0.5",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-dom": "^1.0.1",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-typescript": "^4.0.0",
     "mocha": "^5.2.0",
     "ts-loader": "^5.3.3",
@@ -45,7 +45,6 @@
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
-    "karma": "^4.0.0",
     "rxjs": "^6.4.0"
   }
 }
