--- a/src/client/tsconfig.spec.json
+++ b/src/client/tsconfig.spec.json
@@ -3,15 +3,10 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "module": "commonjs",
-    "types": [
-      "jasmine",
-      "node"
+    "typeRoots": [
+      "node_modules/@types"
     ]
   },
-  "files": [
-    "test.ts",
-    "polyfills.ts"
-  ],
   "include": [
     "**/*.spec.ts",
     "**/*.d.ts"
