--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,11 +49,6 @@
     "experimentalDecorators": true, /* Enables experimental support for ES7 decorators. */
     "emitDecoratorMetadata": true, /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/client/**/*.ts"
-  ],
+  "include": [],
+  "exclude": [],
 }
